--- a/MarketCountdownApp/MarketCountdownApp.csproj
+++ b/MarketCountdownApp/MarketCountdownApp.csproj
@@ -1,32 +1,16 @@
 <Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
   <PropertyGroup>
+    <!-- Standalone WPF EXE -->
     <OutputType>WinExe</OutputType>
     <TargetFramework>net48</TargetFramework>
     <UseWPF>true</UseWPF>
-
-    <!-- THESE TWO LINES MUST MATCH your XAML x:Class namespace -->
     <AssemblyName>MarketCountdownApp</AssemblyName>
     <RootNamespace>MarketCountdownApp</RootNamespace>
   </PropertyGroup>
 
-
-  <!-- Include your icon assets -->
+  <!-- Include all PNGs under Icons\ as content -->
   <ItemGroup>
     <None Include="Icons\**\*.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="Icons\London.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Icons\New_York.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Icons\Sydney.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="Icons\Tokyo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
