--- a/MarketCountdownApp/MarketCountdownApp.csproj
+++ b/MarketCountdownApp/MarketCountdownApp.csproj
@@ -7,6 +7,7 @@
     <LangVersion>9.0</LangVersion>
     <AssemblyName>MarketCountdownApp</AssemblyName>
     <RootNamespace>MarketCountdownApp</RootNamespace>
+    <ApplicationIcon>MarketCountdownVS.ico</ApplicationIcon>
   </PropertyGroup>
 
   <!-- Include all PNGs under Icons\ as content -->
@@ -16,6 +17,18 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Icons\MarketCountdownVS.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="MarketCountdownVS.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Icons\Collapse.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Icons\Expand.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Icons\London.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -32,5 +45,8 @@
   <ItemGroup>
     <!-- ensure HttpClient is available -->
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\MarketCountdownVS.ico" />
   </ItemGroup>
 </Project>
